scrollbars but cooler (matt please fix)

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -10,23 +10,23 @@
 
 /* Scrollbar */
 /* Common styles for Chrome, Safari, Edge */
-::-webkit-scrollbar {
-    width: 0px;
-}
+// ::-webkit-scrollbar {
+//     width: 0px;
+// }
 
-::-webkit-scrollbar-thumb {
-    background-clip: padding-box;
-}
+// ::-webkit-scrollbar-thumb {
+//     background-clip: padding-box;
+// }
 
-::-webkit-scrollbar-thumb:hover {
-    background-color: #bbbbbb;
-}
+// ::-webkit-scrollbar-thumb:hover {
+//     background-color: #bbbbbb;
+// }
 
 /* Firefox */
-* {
-    scrollbar-width: none;
-    scrollbar-color: var(--colorPrimary) transparent;
-}
+// * {
+//     scrollbar-width: none;
+//     scrollbar-color: var(--colorPrimary) transparent;
+// }
 
 html {
     scroll-behavior: smooth;
@@ -45,25 +45,43 @@ body {
 
 /* Toast */
 .Toastify__toast-container .Toastify__toast {
-	background: var(--pure-black);
-	border-radius: 8px !important;
+    background: var(--pure-black);
+    border-radius: 8px !important;
 }
 
 .Toastify__progress-bar {
-	height: 4px !important;
-	background: gray !important;
+    height: 4px !important;
+    background: gray !important;
 }
 
 .Toastify__toast--info,
 .Toastify__toast--success,
 .Toastify__toast--warning,
-.Toastify__toast--error { border-left: var(--pure-black) 4px solid; }
+.Toastify__toast--error {
+    border-left: var(--pure-black) 4px solid;
+}
 
-.Toastify__toast--info { border-color: #0044FF !important; }
-.Toastify__progress-bar--info { background: #0044FF !important; }
-.Toastify__toast--success { border-color: #00FF00 !important; }
-.Toastify__progress-bar--success { background: #00FF00 !important; }
-.Toastify__toast--warning { border-color: #FFDD00 !important; }
-.Toastify__progress-bar--warning { background: #FFDD00 !important; }
-.Toastify__toast--error { border-color: #DD0000 !important; }
-.Toastify__progress-bar--error { background: #DD0000 !important; }
+.Toastify__toast--info {
+    border-color: #0044ff !important;
+}
+.Toastify__progress-bar--info {
+    background: #0044ff !important;
+}
+.Toastify__toast--success {
+    border-color: #00ff00 !important;
+}
+.Toastify__progress-bar--success {
+    background: #00ff00 !important;
+}
+.Toastify__toast--warning {
+    border-color: #ffdd00 !important;
+}
+.Toastify__progress-bar--warning {
+    background: #ffdd00 !important;
+}
+.Toastify__toast--error {
+    border-color: #dd0000 !important;
+}
+.Toastify__progress-bar--error {
+    background: #dd0000 !important;
+}
